"""Auto-migration

Revision ID: 07a03da1d656
Revises: 
Create Date: 2025-12-27 01:51:46.258160

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '07a03da1d656'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('badge',
    sa.Column('badge_id', sa.Integer(), nullable=False),
    sa.Column('badge_name', sa.String(length=100), nullable=False),
    sa.Column('description', sa.String(length=255), nullable=True),
    sa.Column('date_obtained', sa.Date(), nullable=True),
    sa.Column('icon_url', sa.String(length=255), nullable=True),
    sa.PrimaryKeyConstraint('badge_id')
    )
    op.create_table('otp',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('email', sa.String(length=120), nullable=False),
    sa.Column('code', sa.String(length=6), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('attempts', sa.Integer(), nullable=True),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('topic',
    sa.Column('topic_id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=100), nullable=False),
    sa.Column('description', sa.String(length=255), nullable=False),
    sa.Column('popularity_score', sa.Integer(), nullable=True),
    sa.PrimaryKeyConstraint('topic_id'),
    sa.UniqueConstraint('name')
    )
    op.create_table('user',
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('username', sa.String(length=80), nullable=False),
    sa.Column('email', sa.String(length=120), nullable=False),
    sa.Column('first_name', sa.String(length=50), nullable=False),
    sa.Column('last_name', sa.String(length=50), nullable=False),
    sa.Column('bio', sa.Text(), nullable=True),
    sa.Column('avatar_url', sa.String(length=255), nullable=True),
    sa.Column('phone_number', sa.String(length=20), nullable=True),
    sa.Column('is_active', sa.Boolean(), nullable=True),
    sa.Column('is_verified', sa.Boolean(), nullable=True),
    sa.Column('join_date', sa.DateTime(), nullable=True),
    sa.Column('last_login', sa.DateTime(), nullable=True),
    sa.Column('badge_id', sa.Integer(), nullable=True),
    sa.ForeignKeyConstraint(['badge_id'], ['badge.badge_id'], ),
    sa.PrimaryKeyConstraint('user_id'),
    sa.UniqueConstraint('email'),
    sa.UniqueConstraint('username')
    )
    op.create_table('snippet',
    sa.Column('snippet_id', sa.Integer(), nullable=False),
    sa.Column('author_id', sa.Integer(), nullable=False),
    sa.Column('title', sa.String(length=200), nullable=False),
    sa.Column('code_content', sa.Text(), nullable=True),
    sa.Column('language', sa.String(length=50), nullable=True),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('is_public', sa.Boolean(), nullable=True),
    sa.Column('view_count', sa.Integer(), nullable=True),
    sa.Column('like_count', sa.Integer(), nullable=True),
    sa.Column('creation_date', sa.Date(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['author_id'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('snippet_id')
    )
    op.create_table('user_follower',
    sa.Column('follower_id', sa.Integer(), nullable=False),
    sa.Column('followed_id', sa.Integer(), nullable=False),
    sa.Column('follow_date', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['followed_id'], ['user.user_id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['follower_id'], ['user.user_id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('follower_id', 'followed_id')
    )
    op.create_table('review',
    sa.Column('review_id', sa.Integer(), nullable=False),
    sa.Column('snippet_id', sa.Integer(), nullable=False),
    sa.Column('reviewer_id', sa.Integer(), nullable=False),
    sa.Column('rating', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['reviewer_id'], ['user.user_id'], ),
    sa.ForeignKeyConstraint(['snippet_id'], ['snippet.snippet_id'], ),
    sa.PrimaryKeyConstraint('review_id')
    )
    op.create_table('snippet_topic',
    sa.Column('snippet_id', sa.Integer(), nullable=False),
    sa.Column('topic_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['snippet_id'], ['snippet.snippet_id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['topic_id'], ['topic.topic_id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('snippet_id', 'topic_id')
    )
    op.create_table('user_likes_snippet',
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('snippet_id', sa.Integer(), nullable=False),
    sa.Column('like_date', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['snippet_id'], ['snippet.snippet_id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['user_id'], ['user.user_id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('user_id', 'snippet_id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('user_likes_snippet')
    op.drop_table('snippet_topic')
    op.drop_table('review')
    op.drop_table('user_follower')
    op.drop_table('snippet')
    op.drop_table('user')
    op.drop_table('topic')
    op.drop_table('otp')
    op.drop_table('badge')
    # ### end Alembic commands ###
